# battleships_iscp

./: .gitignore  README.md  go.mod  go.sum
smartcontract/: Cargo.toml
smartcontract/iota_sc_utils/: Cargo.toml
smartcontract/iota_sc_utils/src/: lib.rs  params.rs
smartcontract/src/: battleship_iscp.rs  consts.rs  helpers.rs  lib.rs  structures.rs
smartcontract/src/game/: Cargo.toml
smartcontract/src/game/src/: field.rs  mediator.rs  player.rs  structures.rs  utils.rs
smartcontract/src/game/test/: mod.rs
tests/smartcontract/: my_iota_smart_contract_test.go
tests/testutils/: contractWasmFileFinder.go
tests/testutils/testconstants/: test_constants.go
