[package]
name = "battleship_iscp"
version = "0.1.0"
authors = ["Kristofvdj88 <kristofvdj88@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The famous Battleship game, build on top of ISCP (IOTA Smart Contract Protocol)."
repository = "https://github.com/user/kristofvdj88/battleships_iscp"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
battleship = { path = "src/game" }
iota_sc_utils = { path = "iota_sc_utils" }
wasmlib = { path = "wasp/contracts/rust/wasmlib" }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
nanoid = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"